# internal/models/person.go
@@ -6,7 +6,7 @@ type Person struct {
 	Surname     string  `json:"surname"`
 	Patronymic  *string `json:"patronymic,omitempty"`
 	Age         *int    `json:"age,omitempty"`
-	Gender      *string `json:"gender,omitempty"`
+	Gender      *string `json:"gender,omitempty" enums:"male,female,other"`
 	Nationality *string `json:"nationality,omitempty"`
 }
 
@@ -14,6 +14,15 @@ type PersonRequest struct {
 	Name       string  `json:"name" binding:"required"`
 	Surname    string  `json:"surname" binding:"required"`
 	Patronymic *string `json:"patronymic,omitempty"`
+}
+
+type PersonPatch struct {
+	Name        *string `json:"name,omitempty"`
+	Surname     *string `json:"surname,omitempty"`
+	Patronymic  *string `json:"patronymic,omitempty"`
+	Age         *int    `json:"age,omitempty"`
+	Gender      *string `json:"gender,omitempty" enums:"male,female,other"`
+	Nationality *string `json:"nationality,omitempty"`
 }
 
 type ErrorResponse struct {
